# advent-of-code

./: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json
2023/: package.json
2023/13/: day13-1.js  day13-2.js
2023/14/: day14-1.js
2023/15/: day15-1.js  day15-2.js
2023/2/: day2-2.js
2023/3/: day3-2.js
2023/4/: day4-1.js  day4-2.js
2023/5/: day5-1.js
2023/6/: data1.txt  day6-1.js
2023/8/: day8-1.js  day8-2.js
2023/9/: day9-2.js
2024/: .eslintrc.json  package-lock.json
2024/1/: day1-1.js  day1-2.js
2024/10/: part1.js  part2.js
2024/11/: part1.js  part2.js
2024/12/: part1.js  part2.js
2024/13/: part1.js  part2.js
2024/14/: part1.js  part2.js
2024/15/: part1.js  part2.js
2024/16/: part1.js  part2.js
2024/17/: part1.js  part2.js
2024/18/: part1.js  part2.js
2024/19/: part1.js  part2.js
2024/2/: day2-2.js  part1.js
2024/20/: part1.js  part2.js
2024/3/: day3-1.js  part2.js
2024/4/: day4-1.js  day4-2.js
2024/5/: day5-1.js  day5-2.js
2024/6/: day6-2.js  part1.js
2024/7/: part1.js  part2.js
2024/8/: part1.js  part2.js
2024/9/: part1.js  part2.js
2025/: run-solution.md  x2025.cabal
2025/01/: solution.hs
2025/02/: solution.hs
2025/03/: solution.hs
2025/04/: solution.hs
2025/05/: solution.hs
2025/06/: solution.hs
2025/07/: solution.hs
2025/08/: solution.hs
2025/09/: solution.hs
2025/10/: solution.hs
2025/11/: solution.hs
2025/_example/: solution.hs
2025/_template/: solution.hs
2025/lib/Advent/: Utils.hs
solutions/1/: day1-1.js  day1-2.js
solutions/10/: day10-1.js  day10-2.js
solutions/11/: day11-1.js  day11-2.js
solutions/12/: day12-1.js  day12-2.js
solutions/14/: day14-2.js
solutions/2/: day2-1.js
solutions/3/: day3-1.js
solutions/5/: day5-2.js
solutions/6/: data2.txt  day6-2.js
solutions/7/: day7-1.js  day7-2.js
solutions/9/: day9-1.js
