cabal-version:      3.0
name:               x2025
version:            0.1.0.0
author:             Damon
build-type:         Simple

library
    default-extensions:
        TypeApplications
      , TypeOperators
      , TypeFamilies
      , TupleSections
      , DeriveGeneric
      , NumericUnderscores
      , NamedFieldPuns
    hs-source-dirs:   lib
    exposed-modules:  Advent.Utils
    build-depends:
        base >=4.7 && <5
      , extra
      , containers
    default-language: Haskell2010
    ghc-options:      -Wall

common deps
    default-extensions:
        TypeApplications
      , TypeOperators
      , TypeFamilies
      , TupleSections
      , DeriveGeneric
      , NumericUnderscores
      , NamedFieldPuns
    build-depends:
        base >=4.7 && <5
      , x2025
      , extra
      , containers
      , parallel
      , MemoTrie

common warnings
    ghc-options: -Wall

executable 01
    import:           deps
    main-is:          solution.hs
    hs-source-dirs:   01
    default-language: Haskell2010

executable 02
    import:           deps
    main-is:          solution.hs
    hs-source-dirs:   02
    default-language: Haskell2010

executable 03
    import:           deps
    main-is:          solution.hs
    hs-source-dirs:   03
    default-language: Haskell2010

executable 04
    import:           deps
    main-is:          solution.hs
    hs-source-dirs:   04
    default-language: Haskell2010

executable 05
    import:           deps
    main-is:          solution.hs
    hs-source-dirs:   05
    default-language: Haskell2010

executable 06
    import:           deps
    main-is:          solution.hs
    hs-source-dirs:   06
    default-language: Haskell2010

executable 07
    import:           deps
    main-is:          solution.hs
    hs-source-dirs:   07
    default-language: Haskell2010

executable 08
    import:           deps
    main-is:          solution.hs
    hs-source-dirs:   08
    default-language: Haskell2010

executable 09
    import:           deps
    main-is:          solution.hs
    hs-source-dirs:   09
    default-language: Haskell2010

executable 10
    import:           deps
    main-is:          solution.hs
    hs-source-dirs:   10
    default-language: Haskell2010

executable 11
    import:           deps
    main-is:          solution.hs
    hs-source-dirs:   11
    default-language: Haskell2010